@@ -63,11 +63,9 @@ public class ImportDataController extends BaseController implements IImportDataC
 		for (CompletableFuture<List<NetAssetValue>> completableFuture : cfNavs) {
 			responseAll.add(completableFuture.join());
 		}
-		List<NetAssetValue> navsData = responseAll.stream().flatMap(List::stream).collect(Collectors.toList());
+		List<NetAssetValue> navsData = responseAll.stream().flatMap(List::stream).toList();
 
 		CompletableFuture.supplyAsync(()->iNetAssetValueService.save2(navsData)).join();
-		
-		//iNetAssetValueService.save2(navsData);
 
 		List<NetAssetValue> navs = getLatestNAVModel(navURL, restTemplate);
 		iNetAssetValueService.save2(navs);
@@ -75,65 +73,4 @@ public class ImportDataController extends BaseController implements IImportDataC
 		long duration = System.currentTimeMillis() - start;
 		log.info("Duration took to complete Import : {}  ",duration);
 	}
-
-	/*
-	 * @GetMapping("/importPFMDatazzzzzzz") public void importData() { long start =
-	 * System.currentTimeMillis(); String baseUrl = getURL("base");
-	 * 
-	 * String pfmsURL = baseUrl + getURL("pfms"); List<PensionFundManagerDTO>
-	 * pfmDTOs = getPFMData(pfmsURL, restTemplate); ipfmService.save(pfmDTOs);
-	 * 
-	 * String pfmSchemeURL = baseUrl + getURL("schemes");
-	 * List<PensionFundManagerSchemesDTO> pfmSchemes =
-	 * getPFMSchemeData(pfmSchemeURL, restTemplate);
-	 * iPensionFundManagerSchemesService.save(pfmSchemes);
-	 * 
-	 * iNetAssetValueService.save(getAllPFMSchemesNAV());
-	 * 
-	 * String navURL = baseUrl + getURL("latest");
-	 * 
-	 * List<NetAssetValueDTO> navs= getLatestNAV(navURL, restTemplate);
-	 * iNetAssetValueService.save(navs);
-	 * 
-	 * long duration = System.currentTimeMillis() - start;
-	 * System.out.println("Duration took of Import 1111: "+duration); }
-	 */
-	
-	
-	
-	
-	/*
-	 * public List<NetAssetValueDTO> getAllPFMSchemesNAV(){
-	 * List<List<NetAssetValueDTO>> responseAll = new ArrayList<>();
-	 * List<PensionFundManagerSchemesDTO> schemes =
-	 * iPensionFundManagerSchemesService.getAll(); List<PensionFundManagerSchemes>
-	 * schemes2=convertToPFMSModelList.apply(schemes);
-	 * log.info("Size : {} ",schemes.size()); for (PensionFundManagerSchemes scheme
-	 * : schemes2) { String schemeId =scheme.getId(); String baseUrl =
-	 * getURL("base"); String schemeNavUrl = getURL("schemenav"); schemeNavUrl =
-	 * schemeNavUrl.replaceAll("SCHEME_ID", schemeId); String url =
-	 * baseUrl+schemeNavUrl; List<NetAssetValueDTO> response = getLatestNAV(url,
-	 * schemeId,restTemplate); responseAll.add(response); } List<NetAssetValueDTO>
-	 * navs=responseAll.stream().flatMap(List::stream).collect(Collectors.toList());
-	 * return navs; }
-	 */
-	
-	
-	/*
-	 * public List<NetAssetValue> getAllPFMSchemesNAV2() { List<List<NetAssetValue>>
-	 * responseAll = new ArrayList<>(); List<PensionFundManagerSchemes> schemes =
-	 * iPensionFundManagerSchemesService.getAllModel();
-	 * //System.out.println("Size : "+schemes.size()); for
-	 * (PensionFundManagerSchemes scheme : schemes) { String schemeId
-	 * =scheme.getId(); String baseUrl = getURL("base"); String schemeNavUrl =
-	 * getURL("schemenav"); schemeNavUrl = schemeNavUrl.replaceAll("SCHEME_ID",
-	 * schemeId); String url = baseUrl+schemeNavUrl;
-	 * CompletableFuture<List<NetAssetValue>> cf=
-	 * CompletableFuture.supplyAsync(()->getLatestNAVModel(url,
-	 * schemeId,restTemplate)); responseAll.add(cf.join());
-	 * //System.out.println("done : "+schemeId); } List<NetAssetValue>
-	 * navs=responseAll.stream().flatMap(List::stream).collect(Collectors.toList());
-	 * return navs; }
-	 */
-
 }
